fixed overflow

--- a/main_app/static/css/style.css
+++ b/main_app/static/css/style.css
@@ -11,6 +11,7 @@ body {
 }
 
 .header{
+  overflow: hidden;
   width: 100%;
   height: 80px;
   display: block;
